[tool.poetry]
name = "pyobvit"
version = "0.1.0"
description = ""
authors = ["jdanilocorrea <jd.correa.tavares@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
